--- a/index.html
+++ b/index.html
@@ -1,340 +1,333 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Michael Schimkus - Portfolio</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-<link rel="icon" href="favicon.ico" type="image/x-icon" />
-<meta name="description" content="Portfolio website of Michael Schimkus." />
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 <style>
-  :root {
-    --color-primary-start: #7ec0e4;
-    --color-primary-end:   #a0d0f0;
-    --color-primary-dark:  #5ca8d6;
-    --color-white:         #fff;
-    --color-text:          #333;
-    --bg-light:            #f5f7fa;
-    --focus-color:         #b3d7ff;
-  }
+:root {
+  --color-primary-start: #b9e2f9;
+  --color-primary-end:   #d4eefc;
+  --color-primary-dark:  #9dcee9;
+  --color-white:         #fff;
+  --color-text:          #333;
+  --bg-light:            #f5f7fa;
+  --nav-hover-alpha:     0.2;
+  --nav-active-alpha:    0.4;
+}
 
-  *, *::before, *::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
+*, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
-  body {
-    font-family: 'Inter', sans-serif;
-    line-height: 1.6;
-    background: var(--bg-light);
-    color: var(--color-text);
-    scroll-behavior: smooth;
-  }
+body {
+  font-family: 'Inter', sans-serif;
+  line-height: 1.6;
+  background: var(--bg-light);
+  color: var(--color-text);
+  scroll-behavior: smooth;
+}
 
-  header, footer {
-    background: var(--bg-light);
-    color: var(--color-text);
-    padding: 0.5rem 1rem;
-    text-align: center;
-  }
+header, footer {
+  background: var(--bg-light);
+  text-align: center;
+  padding: 0.5rem;
+}
 
-  header h1 {
-    margin: 0.25rem 0;
-    font-size: 1.9rem;
-    font-weight: 600;
-  }
+header h1 {
+  font-size: 1.9rem;
+  font-weight: 600;
+}
 
-  /* Navigation */
-  nav {
-    display: flex;
-    justify-content: center;
-    background: linear-gradient(90deg, var(--color-primary-start), var(--color-primary-end));
-    border-bottom: 1px solid var(--color-primary-dark);
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.12);
-    position: sticky;
-    top: 0;
-    z-index: 100;
-    flex-wrap: wrap;
-  }
+nav {
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(90deg, var(--color-primary-start), var(--color-primary-end));
+  border-bottom: 2px solid var(--color-primary-dark);
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
 
-  nav a {
-    position: relative;
-    color: var(--color-white);
-    padding: 0.65rem 1.5rem;
-    font-weight: 600;
-    font-size: 1.1rem;
-    text-decoration: none;
-    user-select: none;
-    transition: background-color 0.3s ease;
-    outline-offset: 3px;
-    border-radius: 12px;
-  }
+nav a {
+  color: var(--color-white);
+  padding: 0.65rem 1.5rem;
+  font-weight: 600;
+  font-size: 1.1rem;
+  text-decoration: none;
+  transition: background-color 0.25s ease;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.15);
+}
 
-  /* Active & hover background highlight */
-  nav a.active,
-  nav a:hover {
-    background-color: rgba(160, 208, 240, 0.08); /* increase alpha if you want stronger */
-    color: var(--color-white);
-  }
+nav a:hover { background-color: rgba(157,206,233,var(--nav-hover-alpha)); }
+nav a.active { background-color: rgba(157,206,233,var(--nav-active-alpha)); }
 
-  nav a:focus-visible {
-    outline: 3px solid var(--focus-color);
-    outline-offset: 2px;
-  }
+main {
+  max-width: 1200px;
+  margin: 1rem auto;
+  padding: 1rem;
+}
 
-  main {
-    max-width: 1200px;
-    margin: 1rem auto;
-    padding: 1rem 1.5rem;
-  }
+.card {
+  background: var(--color-white);
+  padding: 1.5rem;
+  border-radius: 10px;
+  border: 1px solid #e0e0e0;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+  margin-bottom: 0.75rem;
+}
 
-  section {
-    margin-bottom: 1.25rem;
-  }
+.card > h2 {
+  background: linear-gradient(90deg, var(--color-primary-dark), var(--color-primary-end));
+  color: var(--color-white);
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.15);
+  font-size: 1.25rem;
+  font-weight: 600;
+  padding: 0.4rem 1.2rem;
+  border-radius: 10px 10px 0 0;
+  border-bottom: 2px solid var(--color-primary-dark);
+  margin: -1.5rem -1.5rem 1rem;
+}
 
-  /* Card container */
-  .card {
-    background: var(--color-white);
-    padding: 1.75rem;
-    border-radius: 10px;
-    border: 1px solid #e0e0e0;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-    margin-bottom: 0.75rem;
-    transition: box-shadow 0.3s ease;
-    position: relative;
-    overflow: visible;
-  }
+.gallery {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 
-  .card:hover {
-    box-shadow: 0 12px 36px rgba(0, 0, 0, 0.15);
-  }
+.gallery-item img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  cursor: pointer;
+  border-radius: 8px;
+  display: block;
+}
 
-  /* Blue header bar on main cards (slimmer) */
-  .card > h2 {
-    background: var(--color-primary-end);
-    color: var(--color-white);
-    font-size: 1.25rem;
-    font-weight: 600;
-    padding: 0.4rem 1.2rem;
-    margin: -1.75rem -1.75rem 1.1rem;
-    border-radius: 10px 10px 0 0;
-    border-bottom: 2px solid var(--color-primary-dark);
-    box-sizing: border-box;
-  }
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 
-  /* Gallery */
-  .gallery {
-    display: flex;
-    flex-direction: column;
-    gap: 1.25rem;
-    margin-top: 1.1rem;
-  }
+input, textarea, button {
+  font: inherit;
+  border-radius: 8px;
+}
 
-  .gallery-item {
-    background: var(--color-white);
-    border: 1px solid #e0e0e0;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.06);
-    display: flex;
-    flex-direction: column;
-  }
+input, textarea {
+  padding: 0.85rem;
+  border: 1px solid #ccc;
+  transition: border-color 0.3s, box-shadow 0.3s;
+}
 
-  .gallery-item a {
-    display: block;
-    width: 100%;
-    line-height: 0; /* remove gap below image */
-  }
+input:focus, textarea:focus {
+  border-color: var(--color-primary-end);
+  box-shadow: 0 0 8px rgba(198,239,255,0.5);
+  outline: none;
+}
 
-  .gallery-item img {
-    width: 100%;
-    height: 180px;
-    object-fit: cover;
-    display: block;
-  }
+button {
+  background: var(--color-primary-end);
+  color: var(--color-white);
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.15);
+  padding: 0.85rem;
+  border: none;
+  font-weight: 700;
+  cursor: pointer;
+  transition: background 0.3s, transform 0.2s;
+}
 
-  /* Form */
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
+button:hover { background: var(--color-primary-dark); transform: scale(1.05); }
 
-  input, textarea {
-    padding: 0.85rem;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    font: inherit;
-    width: 100%;
-    transition: box-shadow 0.3s ease, border-color 0.3s ease;
-  }
+#scrollTopBtn {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  background: var(--color-primary-end);
+  color: var(--color-white);
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.15);
+  border: none;
+  padding: 10px 15px;
+  border-radius: 50%;
+  font-size: 1.3rem;
+  cursor: pointer;
+  display: none;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.25);
+}
 
-  input:focus, textarea:focus {
-    outline: none;
-    border-color: var(--color-primary-end);
-    box-shadow: 0 0 8px rgba(160, 208, 240, 0.5);
-  }
+footer p {
+  color: var(--color-white);
+  background: linear-gradient(90deg, var(--color-primary-start), var(--color-primary-end));
+  padding: 0.5rem;
+  margin: 0;
+  border-top: 2px solid var(--color-primary-dark);
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.15);
+}
 
-  button {
-    background: var(--color-primary-end);
-    color: var(--color-white);
-    padding: 0.85rem;
-    border: none;
-    border-radius: 8px;
-    font: inherit;
-    font-weight: 700;
-    cursor: pointer;
-    transition: background 0.3s ease, transform 0.2s ease;
-  }
+/* Lightbox */
+#lightbox {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.85);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  padding: 1rem;
+}
+#lightbox[aria-hidden="false"] { display: flex; }
 
-  button:hover,
-  button:focus-visible {
-    background: var(--color-primary-dark);
-    transform: scale(1.05);
-    outline: none;
-  }
+.lightbox-content { position: relative; max-width: 90vw; max-height: 90vh; text-align: center; }
+#lightbox-img { max-width: 100%; max-height: 80vh; object-fit: contain; }
+#lightbox-caption { margin-top: 0.75rem; color: var(--color-white); font-size: 0.95rem; }
 
-  /* Scroll-to-top button */
-  #scrollTopBtn {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    background: var(--color-primary-end);
-    color: var(--color-white);
-    border: none;
-    padding: 10px 15px;
-    border-radius: 50%;
-    font-size: 1.3rem;
-    cursor: pointer;
-    display: none;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.25);
-    transition: background 0.3s ease, transform 0.2s ease;
-  }
+.lightbox-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(255,255,255,0.2);
+  color: var(--color-white);
+  border: none;
+  padding: 0.5rem 0.75rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+  border-radius: 6px;
+}
+.lightbox-btn:hover { background: rgba(255,255,255,0.35); }
+#lightbox-prev { left: -2.5rem; }
+#lightbox-next { right: -2.5rem; }
+#lightbox-close {
+  position: absolute;
+  top: -2rem;
+  right: 0;
+  background: rgba(255,255,255,0.25);
+  padding: 0.25rem 0.6rem;
+  font-size: 1.2rem;
+  border-radius: 6px;
+}
+#lightbox-close:hover { background: rgba(255,255,255,0.4); }
 
-  #scrollTopBtn:hover,
-  #scrollTopBtn:focus-visible {
-    background: var(--color-primary-dark);
-    transform: scale(1.1);
-    outline: none;
-  }
-
-  /* Responsive tweaks */
-  @media (max-width: 600px) {
-    nav a {
-      font-size: 1rem;
-      padding: 0.55rem 1rem;
-    }
-    .card {
-      padding: 1.2rem;
-    }
-    .card > h2 {
-      font-size: 1.1rem;
-      margin: -1.2rem -1.2rem 0.9rem;
-      padding: 0.4rem 1rem;
-      border-radius: 8px 8px 0 0;
-    }
-    .gallery-item img {
-      height: 140px;
-    }
-  }
+@media (max-width: 600px) {
+  nav a { font-size: 1rem; padding: 0.5rem 1rem; }
+  .gallery-item img { height: 140px; }
+  .card > h2 { font-size: 1.1rem; }
+  #lightbox-prev { left: 0.25rem; }
+  #lightbox-next { right: 0.25rem; }
+  #lightbox-close { top: 0.25rem; right: 0.25rem; }
+}
 </style>
 </head>
 <body>
-<header>
-  <h1>Michael Schimkus</h1>
-</header>
+<header><h1>Michael Schimkus</h1></header>
 
-<nav role="navigation" aria-label="Main navigation">
+<nav>
   <a href="#about" class="nav-link">About</a>
   <a href="#portfolio" class="nav-link">Portfolio</a>
   <a href="#contact" class="nav-link">Contact</a>
 </nav>
 
 <main>
-  <section id="about">
-    <div class="card">
-      <h2>About</h2>
-      <p>This is the About section. Add information about yourself or your brand here.</p>
-    </div>
+  <section id="about" class="card">
+    <h2>About</h2>
+    <p>This is the About section. Add information about yourself or your brand here.</p>
   </section>
 
-  <section id="portfolio">
-    <div class="card">
-      <h2>Portfolio</h2>
-      <p>Check out some of my projects below:</p>
-      <div class="gallery">
-        <div class="gallery-item">
-          <a href="https://via.placeholder.com/800x500" target="_blank" rel="noopener noreferrer">
-            <img src="https://via.placeholder.com/800x500" alt="Screenshot of Project 1" />
-          </a>
-        </div>
-        <div class="gallery-item">
-          <a href="https://via.placeholder.com/800x500" target="_blank" rel="noopener noreferrer">
-            <img src="https://via.placeholder.com/800x500" alt="Screenshot of Project 2" />
-          </a>
-        </div>
-        <div class="gallery-item">
-          <a href="https://via.placeholder.com/800x500" target="_blank" rel="noopener noreferrer">
-            <img src="https://via.placeholder.com/800x500" alt="Screenshot of Project 3" />
-          </a>
-        </div>
-        <div class="gallery-item">
-          <a href="https://via.placeholder.com/800x500" target="_blank" rel="noopener noreferrer">
-            <img src="https://via.placeholder.com/800x500" alt="Screenshot of Project 4" />
-          </a>
-        </div>
+  <section id="portfolio" class="card">
+    <h2>Portfolio</h2>
+    <p>Check out some of my projects below:</p>
+    <div class="gallery">
+      <div class="gallery-item">
+        <a href="https://via.placeholder.com/1600x1000" data-full="https://via.placeholder.com/1600x1000" data-caption="Project 1 Full Screenshot">
+          <img src="https://via.placeholder.com/800x500" alt="Project 1">
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a href="https://via.placeholder.com/1600x1000/eeeeee/333" data-full="https://via.placeholder.com/1600x1000/eeeeee/333" data-caption="Project 2 Full Screenshot">
+          <img src="https://via.placeholder.com/800x500/eeeeee/333" alt="Project 2">
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a href="https://via.placeholder.com/1600x1000/cccccc/000" data-full="https://via.placeholder.com/1600x1000/cccccc/000" data-caption="Project 3 Full Screenshot">
+          <img src="https://via.placeholder.com/800x500/cccccc/000" alt="Project 3">
+        </a>
       </div>
     </div>
   </section>
 
-  <section id="contact">
-    <div class="card">
-      <h2>Contact</h2>
-      <form>
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
-    </div>
+  <section id="contact" class="card">
+    <h2>Contact</h2>
+    <form>
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
   </section>
 </main>
 
-<footer>
-  <p>&copy; 2025 Michael Schimkus</p>
-</footer>
-
+<footer><p>&copy; 2025 Michael Schimkus</p></footer>
 <button id="scrollTopBtn" aria-label="Scroll to top">&#8679;</button>
 
+<div id="lightbox" aria-hidden="true">
+  <div class="lightbox-content">
+    <img id="lightbox-img" src="" alt="">
+    <div id="lightbox-caption"></div>
+    <button id="lightbox-prev" class="lightbox-btn">&#10094;</button>
+    <button id="lightbox-next" class="lightbox-btn">&#10095;</button>
+    <button id="lightbox-close">&times;</button>
+  </div>
+</div>
+
 <script>
-  const navLinks = document.querySelectorAll('.nav-link');
-  const sections  = document.querySelectorAll('main section');
-  const scrollTopBtn = document.getElementById('scrollTopBtn');
+const navLinks = document.querySelectorAll('.nav-link');
+const sections = document.querySelectorAll('main section');
+const scrollTopBtn = document.getElementById('scrollTopBtn');
+const lightbox = document.getElementById('lightbox');
+const lightboxImg = document.getElementById('lightbox-img');
+const lightboxCaption = document.getElementById('lightbox-caption');
+const galleryLinks = [...document.querySelectorAll('.gallery-item a')];
+let currentIndex = 0;
 
-  // Intersection Observer to set active nav link
-  const observer = new IntersectionObserver(
-    entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          navLinks.forEach(link => link.classList.remove('active'));
-            const activeLink = document.querySelector(`nav a[href="#${entry.target.id}"]`);
-            if (activeLink) activeLink.classList.add('active');
-        }
-      });
-    },
-    { threshold: 0.5 }
-  );
-  sections.forEach(sec => observer.observe(sec));
+function setActiveLink(id) {
+  navLinks.forEach(link => link.classList.toggle('active', link.getAttribute('href') === `#${id}`));
+}
 
-  // Scroll-to-top button visibility
-  window.addEventListener('scroll', () => {
-    scrollTopBtn.style.display = window.scrollY > 300 ? 'block' : 'none';
-  });
+const observer = new IntersectionObserver(entries => {
+  entries.forEach(e => e.isIntersecting && setActiveLink(e.target.id));
+}, { threshold: 0.5 });
+sections.forEach(sec => observer.observe(sec));
 
-  scrollTopBtn.addEventListener('click', () => {
-    window.scrollTo({ top: 0, behavior: 'smooth' });
-  });
+navLinks.forEach(link => link.addEventListener('click', () => setActiveLink(link.getAttribute('href').slice(1))));
+
+window.addEventListener('scroll', () => scrollTopBtn.style.display = window.scrollY > 300 ? 'block' : 'none');
+scrollTopBtn.addEventListener('click', () => window.scrollTo({ top: 0, behavior: 'smooth' }));
+
+function openLightbox(i) {
+  currentIndex = i;
+  const link = galleryLinks[i];
+  lightboxImg.src = link.dataset.full || link.href;
+  lightboxCaption.textContent = link.dataset.caption || link.querySelector('img').alt;
+  lightbox.setAttribute('aria-hidden', 'false');
+  document.body.style.overflow = 'hidden';
+}
+function closeLightbox() {
+  lightbox.setAttribute('aria-hidden', 'true');
+  lightboxImg.src = '';
+  document.body.style.overflow = '';
+}
+function changeImage(delta) { openLightbox((currentIndex + delta + galleryLinks.length) % galleryLinks.length); }
+
+galleryLinks.forEach((link, i) => link.addEventListener('click', e => { e.preventDefault(); openLightbox(i); }));
+document.getElementById('lightbox-prev').addEventListener('click', () => changeImage(-1));
+document.getElementById('lightbox-next').addEventListener('click', () => changeImage(1));
+document.getElementById('lightbox-close').addEventListener('click', closeLightbox);
+lightbox.addEventListener('click', e => e.target === lightbox && closeLightbox());
+document.addEventListener('keydown', e => {
+  if (lightbox.getAttribute('aria-hidden') === 'true') return;
+  if (e.key === 'Escape') closeLightbox();
+  if (e.key === 'ArrowRight') changeImage(1);
+  if (e.key === 'ArrowLeft') changeImage(-1);
+});
 </script>
 </body>
 </html>
