--- a/index.html
+++ b/index.html
@@ -7,92 +7,103 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 <style>
 :root {
-  --color-primary-start: #b9e2f9;
-  --color-primary-end:   #d4eefc;
-  --color-primary-dark:  #9dcee9;
-  --color-white:         #fff;
-  --color-text:          #333;
-  --bg-light:            #f5f7fa;
-  --nav-hover-alpha:     0.2;
-  --nav-active-alpha:    0.4;
-  --card-border:         #b0b0b0;
+  --color-primary-light: #e7f4fb;
+  --color-primary-mid: #cbeaf9;
+  --color-primary-dark: #9dcee9;
+  --color-white: #fff;
+  --color-text: #222;
+  --color-border: #b0b0b0;
+  --highlight-bg: rgba(157,206,233,0.35);
 }
 
 * { box-sizing: border-box; margin: 0; padding: 0; }
 
 body {
   font-family: 'Inter', sans-serif;
-  line-height: 1.6;
-  background: var(--bg-light);
+  background: #f5f7fa;
   color: var(--color-text);
   scroll-behavior: smooth;
+  line-height: 1.6;
 }
 
 header, footer {
-  background: var(--bg-light);
   text-align: center;
   padding: 0.5rem;
+  background: var(--color-white);
+  border: 1px solid var(--color-border);
+  border-radius: 10px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+  max-width: 1200px;
+  margin: 1rem auto;
 }
 
-header h1 {
-  font-size: 1.9rem;
+header h1, footer p {
+  font-size: 1.8rem;
   font-weight: 600;
-  color: #222;
+  color: var(--color-text);
+  text-shadow: 0 0 1px var(--color-white), 0 0 1px var(--color-white);
 }
 
 nav {
   display: flex;
   justify-content: center;
-  background: linear-gradient(90deg, var(--color-primary-start), var(--color-primary-end));
-  border-bottom: 2px solid var(--color-primary-dark);
+  background: var(--color-white);
+  border: 1px solid var(--color-border);
+  border-radius: 10px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.1);
   position: sticky;
-  top: 0;
+  top: 0.5rem;
   z-index: 100;
+  margin: 0 auto 1rem auto;
+  max-width: 1200px;
+  overflow: hidden;
 }
 
 nav a {
-  color: var(--color-white);
+  color: var(--color-text);
   padding: 0.6rem 1.5rem;
   font-weight: 600;
   font-size: 1.1rem;
   text-decoration: none;
   transition: background-color 0.25s ease;
+  text-shadow: 0 0 1px var(--color-white);
 }
 
 nav a:hover {
-  background-color: rgba(157,206,233,var(--nav-hover-alpha));
+  background-color: rgba(157, 206, 233, 0.2);
 }
 
 nav a.active {
-  background-color: rgba(157,206,233,var(--nav-active-alpha));
+  background-color: var(--highlight-bg);
 }
 
 main {
   max-width: 1200px;
-  margin: 1rem auto;
+  margin: 0 auto;
   padding: 1rem;
 }
 
 .section-title {
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   font-weight: 700;
-  color: #222;
-  margin: 1rem 0 0.5rem;
+  color: var(--color-text);
+  margin: 1rem 0 0.3rem 0;
+  text-shadow: 0 0 1px var(--color-white);
 }
 
 .card {
   background: var(--color-white);
   padding: 1.5rem;
   border-radius: 10px;
-  border: 1px solid var(--card-border);
+  border: 1px solid var(--color-border);
   box-shadow: 0 6px 20px rgba(0,0,0,0.1);
   margin-bottom: 1.5rem;
 }
 
 .project-title {
-  color: var(--color-text);
   font-size: 1rem;
   font-weight: 600;
+  color: var(--color-text);
   margin-bottom: 0.5rem;
 }
 
@@ -106,8 +117,8 @@ main {
   width: 100%;
   height: 180px;
   object-fit: cover;
-  cursor: pointer;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 form {
@@ -124,35 +135,22 @@ input, textarea, button {
 input, textarea {
   padding: 0.85rem;
   border: 1px solid #ccc;
-  transition: border-color 0.3s, box-shadow 0.3s;
-}
-
-input:focus, textarea:focus {
-  border-color: var(--color-primary-end);
-  box-shadow: 0 0 8px rgba(198,239,255,0.5);
-  outline: none;
 }
 
 button {
-  background: var(--color-primary-end);
+  background: var(--color-primary-mid);
   color: var(--color-white);
   padding: 0.85rem;
   border: none;
   font-weight: 700;
   cursor: pointer;
-  transition: background 0.3s, transform 0.2s;
-}
-
-button:hover {
-  background: var(--color-primary-dark);
-  transform: scale(1.05);
 }
 
 #scrollTopBtn {
   position: fixed;
   bottom: 30px;
   right: 30px;
-  background: var(--color-primary-end);
+  background: var(--color-primary-mid);
   color: var(--color-white);
   border: none;
   padding: 10px 15px;
@@ -161,14 +159,6 @@ button:hover {
   cursor: pointer;
   display: none;
   box-shadow: 0 2px 8px rgba(0,0,0,0.25);
-}
-
-footer p {
-  color: #222;
-  background: linear-gradient(90deg, var(--color-primary-start), var(--color-primary-end));
-  padding: 0.5rem;
-  margin: 0;
-  border-top: 2px solid var(--color-primary-dark);
 }
 
 /* Lightbox */
@@ -180,8 +170,8 @@ footer p {
   align-items: center;
   justify-content: center;
   z-index: 1000;
-  padding: 1rem;
 }
+
 #lightbox[aria-hidden="false"] {
   display: flex;
 }
@@ -190,13 +180,14 @@ footer p {
   position: relative;
   max-width: 90vw;
   max-height: 90vh;
-  text-align: center;
 }
+
 #lightbox-img {
   max-width: 100%;
   max-height: 80vh;
   object-fit: contain;
 }
+
 #lightbox-caption {
   margin-top: 0.75rem;
   color: var(--color-white);
@@ -215,15 +206,9 @@ footer p {
   cursor: pointer;
   border-radius: 6px;
 }
-.lightbox-btn:hover {
-  background: rgba(255,255,255,0.35);
-}
-#lightbox-prev {
-  left: -2.5rem;
-}
-#lightbox-next {
-  right: -2.5rem;
-}
+
+#lightbox-prev { left: -2.5rem; }
+#lightbox-next { right: -2.5rem; }
 #lightbox-close {
   position: absolute;
   top: -2rem;
@@ -233,21 +218,11 @@ footer p {
   font-size: 1.2rem;
   border-radius: 6px;
 }
-#lightbox-close:hover {
-  background: rgba(255,255,255,0.4);
-}
 
 @media (max-width: 600px) {
-  nav a {
-    font-size: 1rem;
-    padding: 0.5rem 1rem;
-  }
-  .gallery-item img {
-    height: 140px;
-  }
-  .section-title {
-    font-size: 1.5rem;
-  }
+  nav a { font-size: 1rem; padding: 0.5rem 1rem; }
+  .gallery-item img { height: 140px; }
+  .section-title { font-size: 1.5rem; }
 }
 </style>
 </head>
@@ -271,20 +246,14 @@ footer p {
     <div class="gallery">
       <div class="gallery-item">
         <h3 class="project-title">Project 1</h3>
-        <a href="https://via.placeholder.com/1600x1000" data-full="https://via.placeholder.com/1600x1000" data-caption="Project 1 Full Screenshot">
+        <a href="https://via.placeholder.com/1600x1000">
           <img src="https://via.placeholder.com/800x500" alt="Project 1" />
         </a>
       </div>
       <div class="gallery-item">
         <h3 class="project-title">Project 2</h3>
-        <a href="https://via.placeholder.com/1600x1000/eeeeee/333" data-full="https://via.placeholder.com/1600x1000/eeeeee/333" data-caption="Project 2 Full Screenshot">
+        <a href="https://via.placeholder.com/1600x1000/eeeeee/333">
           <img src="https://via.placeholder.com/800x500/eeeeee/333" alt="Project 2" />
-        </a>
-      </div>
-      <div class="gallery-item">
-        <h3 class="project-title">Project 3</h3>
-        <a href="https://via.placeholder.com/1600x1000/cccccc/000" data-full="https://via.placeholder.com/1600x1000/cccccc/000" data-caption="Project 3 Full Screenshot">
-          <img src="https://via.placeholder.com/800x500/cccccc/000" alt="Project 3" />
         </a>
       </div>
     </div>
@@ -302,75 +271,38 @@ footer p {
 </main>
 
 <footer><p>&copy; 2025 Michael Schimkus</p></footer>
-<button id="scrollTopBtn" aria-label="Scroll to top">&#8679;</button>
 
-<div id="lightbox" aria-hidden="true">
-  <div class="lightbox-content">
-    <img id="lightbox-img" src="" alt="" />
-    <div id="lightbox-caption"></div>
-    <button id="lightbox-prev" class="lightbox-btn">&#10094;</button>
-    <button id="lightbox-next" class="lightbox-btn">&#10095;</button>
-    <button id="lightbox-close">&times;</button>
-  </div>
-</div>
+<button id="scrollTopBtn" aria-label="Scroll to top">&#8679;</button>
 
 <script>
 const navLinks = document.querySelectorAll('.nav-link');
 const sections = document.querySelectorAll('main section');
 const scrollTopBtn = document.getElementById('scrollTopBtn');
-const lightbox = document.getElementById('lightbox');
-const lightboxImg = document.getElementById('lightbox-img');
-const lightboxCaption = document.getElementById('lightbox-caption');
-const galleryLinks = [...document.querySelectorAll('.gallery-item a')];
-let currentIndex = 0;
 
 function setActiveLink(id) {
-  navLinks.forEach(link => link.classList.toggle('active', link.getAttribute('href') === `#${id}`));
+  navLinks.forEach(link => {
+    link.classList.toggle('active', link.getAttribute('href') === `#${id}`);
+  });
 }
 
 function updateActiveSection() {
   let current = '';
   sections.forEach(section => {
-    const sectionTop = section.offsetTop - 120;
-    if (pageYOffset >= sectionTop) current = section.id;
+    const offset = section.offsetTop - 120;
+    if (pageYOffset >= offset) current = section.id;
   });
   if (current) setActiveLink(current);
 }
+
 window.addEventListener('scroll', updateActiveSection);
 updateActiveSection();
 
-navLinks.forEach(link =>
-  link.addEventListener('click', () => setActiveLink(link.getAttribute('href').slice(1)))
-);
+scrollTopBtn.addEventListener('click', () => {
+  window.scrollTo({ top: 0, behavior: 'smooth' });
+});
 
-window.addEventListener('scroll', () => scrollTopBtn.style.display = window.scrollY > 300 ? 'block' : 'none');
-scrollTopBtn.addEventListener('click', () => window.scrollTo({ top: 0, behavior: 'smooth' }));
-
-function openLightbox(i) {
-  currentIndex = i;
-  const link = galleryLinks[i];
-  lightboxImg.src = link.dataset.full || link.href;
-  lightboxCaption.textContent = link.dataset.caption || link.querySelector('img').alt;
-  lightbox.setAttribute('aria-hidden', 'false');
-  document.body.style.overflow = 'hidden';
-}
-function closeLightbox() {
-  lightbox.setAttribute('aria-hidden', 'true');
-  lightboxImg.src = '';
-  document.body.style.overflow = '';
-}
-function changeImage(delta) { openLightbox((currentIndex + delta + galleryLinks.length) % galleryLinks.length); }
-
-galleryLinks.forEach((link, i) => link.addEventListener('click', e => { e.preventDefault(); openLightbox(i); }));
-document.getElementById('lightbox-prev').addEventListener('click', () => changeImage(-1));
-document.getElementById('lightbox-next').addEventListener('click', () => changeImage(1));
-document.getElementById('lightbox-close').addEventListener('click', closeLightbox);
-lightbox.addEventListener('click', e => e.target === lightbox && closeLightbox());
-document.addEventListener('keydown', e => {
-  if (lightbox.getAttribute('aria-hidden') === 'true') return;
-  if (e.key === 'Escape') closeLightbox();
-  if (e.key === 'ArrowRight') changeImage(1);
-  if (e.key === 'ArrowLeft') changeImage(-1);
+window.addEventListener('scroll', () => {
+  scrollTopBtn.style.display = window.scrollY > 300 ? 'block' : 'none';
 });
 </script>
 </body>
