--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Michael Schimkus - Portfolio</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 <style>
 :root {
   --color-primary-light: #e7f4fb;
@@ -14,50 +7,20 @@
   --color-text: #222;
   --color-border: #b0b0b0;
   --highlight-bg: rgba(157,206,233,0.35);
+  --border-radius: 10px;
 }
 
 * { box-sizing: border-box; margin: 0; padding: 0; }
 
 body {
   font-family: 'Inter', sans-serif;
-  background: #f5f7fa;
+  background: #e7f4fb; /* changed to very light blue */
   color: var(--color-text);
   scroll-behavior: smooth;
   line-height: 1.6;
 }
 
-header, footer {
-  text-align: center;
-  padding: 0.5rem;
-  background: var(--color-white);
-  border: 1px solid var(--color-border);
-  border-radius: 10px;
-  box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-  max-width: 1200px;
-  margin: 1rem auto;
-}
-
-header h1, footer p {
-  font-size: 1.8rem;
-  font-weight: 600;
-  color: var(--color-text);
-  text-shadow: 0 0 1px var(--color-white), 0 0 1px var(--color-white);
-}
-
-nav {
-  display: flex;
-  justify-content: center;
-  background: var(--color-white);
-  border: 1px solid var(--color-border);
-  border-radius: 10px;
-  box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-  position: sticky;
-  top: 0.5rem;
-  z-index: 100;
-  margin: 0 auto 1rem auto;
-  max-width: 1200px;
-  overflow: hidden;
-}
+/* ... existing styles ... */
 
 nav a {
   color: var(--color-text);
@@ -69,241 +32,10 @@ nav a {
   text-shadow: 0 0 1px var(--color-white);
 }
 
-nav a:hover {
-  background-color: rgba(157, 206, 233, 0.2);
-}
-
-nav a.active {
-  background-color: var(--highlight-bg);
-}
-
-main {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 1rem;
-}
-
-.section-title {
-  font-size: 1.7rem;
-  font-weight: 700;
-  color: var(--color-text);
-  margin: 1rem 0 0.3rem 0;
-  text-shadow: 0 0 1px var(--color-white);
-}
-
-.card {
-  background: var(--color-white);
-  padding: 1.5rem;
-  border-radius: 10px;
-  border: 1px solid var(--color-border);
-  box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-  margin-bottom: 1.5rem;
-}
-
-.project-title {
-  font-size: 1rem;
+footer p {
+  font-size: 1.1rem;
   font-weight: 600;
   color: var(--color-text);
-  margin-bottom: 0.5rem;
-}
-
-.gallery {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.gallery-item img {
-  width: 100%;
-  height: 180px;
-  object-fit: cover;
-  border-radius: 8px;
-  cursor: pointer;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-input, textarea, button {
-  font: inherit;
-  border-radius: 8px;
-}
-
-input, textarea {
-  padding: 0.85rem;
-  border: 1px solid #ccc;
-}
-
-button {
-  background: var(--color-primary-mid);
-  color: var(--color-white);
-  padding: 0.85rem;
-  border: none;
-  font-weight: 700;
-  cursor: pointer;
-}
-
-#scrollTopBtn {
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  background: var(--color-primary-mid);
-  color: var(--color-white);
-  border: none;
-  padding: 10px 15px;
-  border-radius: 50%;
-  font-size: 1.3rem;
-  cursor: pointer;
-  display: none;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.25);
-}
-
-/* Lightbox */
-#lightbox {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.85);
-  display: none;
-  align-items: center;
-  justify-content: center;
-  z-index: 1000;
-}
-
-#lightbox[aria-hidden="false"] {
-  display: flex;
-}
-
-.lightbox-content {
-  position: relative;
-  max-width: 90vw;
-  max-height: 90vh;
-}
-
-#lightbox-img {
-  max-width: 100%;
-  max-height: 80vh;
-  object-fit: contain;
-}
-
-#lightbox-caption {
-  margin-top: 0.75rem;
-  color: var(--color-white);
-  font-size: 0.95rem;
-}
-
-.lightbox-btn {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background: rgba(255,255,255,0.2);
-  color: var(--color-white);
-  border: none;
-  padding: 0.5rem 0.75rem;
-  font-size: 1.5rem;
-  cursor: pointer;
-  border-radius: 6px;
-}
-
-#lightbox-prev { left: -2.5rem; }
-#lightbox-next { right: -2.5rem; }
-#lightbox-close {
-  position: absolute;
-  top: -2rem;
-  right: 0;
-  background: rgba(255,255,255,0.25);
-  padding: 0.25rem 0.6rem;
-  font-size: 1.2rem;
-  border-radius: 6px;
-}
-
-@media (max-width: 600px) {
-  nav a { font-size: 1rem; padding: 0.5rem 1rem; }
-  .gallery-item img { height: 140px; }
-  .section-title { font-size: 1.5rem; }
+  text-shadow: 0 0 1px var(--color-white); /* match nav text style */
 }
 </style>
-</head>
-<body>
-<header><h1>Michael Schimkus</h1></header>
-
-<nav>
-  <a href="#about" class="nav-link">About</a>
-  <a href="#portfolio" class="nav-link">Portfolio</a>
-  <a href="#contact" class="nav-link">Contact</a>
-</nav>
-
-<main>
-  <h2 class="section-title">About</h2>
-  <section id="about" class="card">
-    <p>This is the About section. Add information about yourself or your brand here.</p>
-  </section>
-
-  <h2 class="section-title">Portfolio</h2>
-  <section id="portfolio" class="card">
-    <div class="gallery">
-      <div class="gallery-item">
-        <h3 class="project-title">Project 1</h3>
-        <a href="https://via.placeholder.com/1600x1000">
-          <img src="https://via.placeholder.com/800x500" alt="Project 1" />
-        </a>
-      </div>
-      <div class="gallery-item">
-        <h3 class="project-title">Project 2</h3>
-        <a href="https://via.placeholder.com/1600x1000/eeeeee/333">
-          <img src="https://via.placeholder.com/800x500/eeeeee/333" alt="Project 2" />
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <h2 class="section-title">Contact</h2>
-  <section id="contact" class="card">
-    <form>
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
-</main>
-
-<footer><p>&copy; 2025 Michael Schimkus</p></footer>
-
-<button id="scrollTopBtn" aria-label="Scroll to top">&#8679;</button>
-
-<script>
-const navLinks = document.querySelectorAll('.nav-link');
-const sections = document.querySelectorAll('main section');
-const scrollTopBtn = document.getElementById('scrollTopBtn');
-
-function setActiveLink(id) {
-  navLinks.forEach(link => {
-    link.classList.toggle('active', link.getAttribute('href') === `#${id}`);
-  });
-}
-
-function updateActiveSection() {
-  let current = '';
-  sections.forEach(section => {
-    const offset = section.offsetTop - 120;
-    if (pageYOffset >= offset) current = section.id;
-  });
-  if (current) setActiveLink(current);
-}
-
-window.addEventListener('scroll', updateActiveSection);
-updateActiveSection();
-
-scrollTopBtn.addEventListener('click', () => {
-  window.scrollTo({ top: 0, behavior: 'smooth' });
-});
-
-window.addEventListener('scroll', () => {
-  scrollTopBtn.style.display = window.scrollY > 300 ? 'block' : 'none';
-});
-</script>
-</body>
-</html>
