--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
 
     header {
-      padding: 0.5rem 0;
+      padding: 1rem 0 0.5rem;
       max-width: var(--max-width);
       margin: 0 auto;
     }
@@ -147,7 +147,7 @@
     }
 
     footer {
-      padding: 0.4rem 1rem;
+      padding: 0.5rem;
       background: var(--color-white);
       border: 1px solid var(--color-border);
       border-radius: var(--border-radius);
