--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     nav a {
   color: var(--color-text);
-  padding: 0.4rem 1rem;
+  padding: 0.2rem 1rem;
   font-weight: 600;
   font-size: 1.1rem;
   text-decoration: none;
@@ -168,8 +168,8 @@
 </head>
 <body>
   <header>
-    <h1>Michael Schimkus</h1>
-  </header>
+  <h1 style="text-align: center;">Michael Schimkus</h1>
+</header>
 
   <div style="max-width: var(--max-width); margin: 0 auto;">
 <nav>
@@ -179,7 +179,8 @@
   </nav>
 </div>
 
-  <main>
+  <div style="max-width: var(--max-width); margin: 0 auto;">
+<main>
     <h2 class="section-title">About</h2>
     $1<br>$2Nam sollicitudin orci sed augue tempor, ut vulputate velit suscipit. Fusce pretium nisi eu neque tempor, at pulvinar orci faucibus.</p>
     </section>
@@ -208,16 +209,15 @@
       </form>
     </section>
   </main>
+</div>
 
   <div style="max-width: var(--max-width); margin: 1rem auto;">
 <footer>
-    <p>&copy; 2025 Michael Schimkus</p>
+  <p>$1 | <a href="#" style="text-decoration: none; color: var(--color-text); text-shadow: 0 0 1px var(--color-white); font-size: 0.9rem;">Return to top</a></p>
   <div style="margin-top: 0.5rem;">
       <a href="#" style="text-decoration: none; font-size: 1.5rem; color: var(--color-text); text-shadow: 0 0 1px var(--color-white);">&#8679;</a>
     </div>
-  <div style="margin-top: 0.3rem; font-size: 0.9rem; display: inline-block;">
-        <a href="#" style="text-decoration: none; color: var(--color-text); text-shadow: 0 0 1px var(--color-white);">| Return to top</a>
-      </div>
+  
   </footer>
 </div>
 
